sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: value ==- is not a member of Int
	if (pos==-1) {
               ^